Adding necessary things for pass the test

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,14 +10,13 @@
       </button>
       <div class="navbar-brand-container">
         <span class="navbar-brand">
-          <h1><i class="fa fa-star"></i> Section Name</h1>
+          <h1><i class="fa fa-star"></i> Book me! </h1>
         </span>
       </div>
     </div>
     <div class="collapse navbar-collapse navbar-top-collapse">
       <div class="navbar-right">
-        <button class="btn btn-secondary navbar-btn" type="button">Button</button>
-        <button class="btn btn-primary navbar-btn" type="button">Call to action</button>
+        {{link-to "Sign up" "signup" data-test-signup-link=true class="btn btn-primary navbar-btn"}}
       </div>
     </div>
   </div>
